Updated blinding cut syntax

--- a/hax/hax.ini
+++ b/hax/hax.ini
@@ -99,7 +99,7 @@ trigger_data_special_path = None
 ##
 # Blinding cut
 ##
-blinding_cut  = '(log(cs2_bottom/cs1)/log(10) > 0.374125*exp(-cs1/33.5861) + 1.43559 -0.000755488*cs1 + 1.33334/cs1 | (cs1 > 200) | (s2<150) | (largest_other_s2>200)'
+blinding_cut  = '(log(cs2_bottom/cs1)/log(10) > 0.374125*exp(-cs1/33.5861) + 1.43559 -0.000755488*cs1 + 1.33334/cs1) | (cs1 > 200) | (s2<150) | (largest_other_s2>200)'
 blind_from_run = 3936
 
 ##
